service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - port: 8888
    targetPort: 8888
