ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-myapp-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /dev-myapp
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 8888
